Dev (#36)
* refactor: implement role-based sidebar and multilingual support (#32)

- Redesigned sidebar menu interface with improved styling and navigation
- Added role-based access control to sidebar menu items based on user permissions
- Implemented multilingual support for list and edit pages using LanguageManager
- Added language switching functionality with real-time UI text updates
- Completed user management with list and edit page functionality
- Removed MapStruct dependency in favor of custom mapping solutions

* Feature/zalopay payment (#34)

* refactor: implement service layer interface pattern

- Created service interfaces for all business services
- Made concrete service classes implement their respective interfaces
- Moved service implementations to com.nhom4.nhtsstore.services.impl package
- Updated dependency injection to use interfaces instead of concrete classes
- Extended generic service patterns for consistent CRUD operations

* Update Pos UI and adjust quantity after buy success

* feat(payment): implement ZaloPay payment integration

- Implement payment strategy pattern with PaymentStrategy interface and factory
- Add ZaloPay payment integration using ZaloPayPaymentStrategy
- Create CashPaymentStrategy for traditional payment method
- Restructure utility classes into appropriate packages
- Add payment status and method enums
- Update invoice and order entities with payment-related fields
- Add database migrations for payment fields
- Enhance cart functionality with new CartVm and CartItemVm
- Update UI components to support new payment flow
- Implement QR code display service for ZaloPay payments
- Add invoice export service

---------

Co-authored-by: Sang <phamvinhsang2002@gmail.com>

---------

Co-authored-by: Sang <phamvinhsang2002@gmail.com>